<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    layout_width="match_parent"
    android:layout_width="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/margin12"
        android:paddingEnd="@dimen/margin8"
        android:gravity="center"
        android:background="@drawable/person_card"
        android:layout_margin="@dimen/margin16"
        android:orientation="horizontal">


        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="93dp"
            android:layout_height="93dp"
            app:shapeAppearanceOverlay="@style/roundImage"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/image" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="@dimen/margin12">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin8"
                android:orientation="horizontal"
                android:baselineAligned="true"
                android:baselineAlignedChildIndex="0">

                <TextView
                    android:id="@+id/username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/dm_sans_bold"
                    android:text="@string/name"
                    android:textColor="@color/primarycolor"
                    android:textSize="@dimen/textSize16"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/noOfHours"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin77"
                    android:layout_marginBottom="@dimen/margin4"
                    android:background="@drawable/custom_style"
                    android:fontFamily="@font/dm_sans_regular"
                    android:paddingHorizontal="@dimen/margin8"
                    android:text="@string/hour"
                    android:textColor="#FFFFFFFF"
                    android:textSize="@dimen/textSize12" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin8"
                android:orientation="horizontal"
                android:baselineAligned="true"
                android:baselineAlignedChildIndex="0">

                <TextView
                    android:id="@+id/career"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/textSize12"
                    android:textColor="@color/secondaryColor"
                    android:fontFamily="@font/dm_sans_medium"
                    android:text="@string/career" />

                <TextView
                    android:id="@+id/nationality"
                    android:textSize="@dimen/textSize12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/secondaryColor"
                    android:fontFamily="@font/dm_sans_medium"
                    android:text="@string/nationality" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="@dimen/margin8"
                android:baselineAligned="true"
                android:baselineAlignedChildIndex="0">

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginEnd="@dimen/margin8"
                    app:srcCompat="@drawable/icon" />

                <TextView
                    android:id="@+id/country"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/dm_sans_regular"
                    android:gravity="center"
                    android:text="@string/palestine"
                    android:textColor="#99263238"
                    android:textSize="@dimen/textSize12" />

                <TextView
                    android:id="@+id/days"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin111"
                    android:fontFamily="@font/dm_sans_regular"
                    android:gravity="right"
                    android:text="@string/days"
                    android:textColor="#99263238"
                    android:textSize="@dimen/textSize12" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin8"
                android:orientation="horizontal"
                android:baselineAligned="true"
                android:baselineAlignedChildIndex="0">

                <TextView
                    android:id="@+id/reviews"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/reviews"
                    android:textSize="@dimen/textSize12"
                    android:textColor="#000000"
                    android:layout_marginEnd="@dimen/margin8"
                    android:fontFamily="@font/dm_sans_regular"/>

                <TextView
                    android:id="@+id/rates"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/margin4"
                    android:textSize="@dimen/textSize12"
                    android:text="@string/rates"
                    android:layout_gravity="center_vertical"
                    android:fontFamily="@font/dm_sans_medium"/>

                <ImageView
                    android:id="@+id/star"
                    android:layout_width="12dp"
                    android:layout_height="12dp"
                    android:layout_marginStart="@dimen/margin4"
                    app:srcCompat="@drawable/ic_star"
                    android:layout_gravity="center"/>

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</androidx.appcompat.widget.LinearLayoutCompat>